# remotesysmonitor

./: CONTRIBUTING  Cargo.toml  README.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: docs.yml  release.yml  test.yml
.trunk/: trunk.yaml
conf/: conf.dev.yaml  conf.example.yaml
src/: checks.rs  config.rs  main.rs  slack.rs  ssh.rs  utils.rs
