[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
thiserror = "1"
ssh2 = "0"
reqwest = { version = "0", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
slack-hook = "0"
chrono = "0"
clap = { version = "4", features = ["derive"] }
log = "0"
env_logger = "0"

[dev-dependencies]
mockito = "1"
