[package]
name = "monitor"
version = "0.1.0"
edition = "2021"
description = "A simple tool for monitoring remote servers using SSH."
repository = "https://github.com/rvhonorato/monitor"
license = "GPL-3.0-or-later"
keywords = ["monitoring", "remote", "ssh"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
homepage = "https://github.com/rvhonorato/monitor"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
thiserror = "1"
ssh2 = "0"
reqwest = { version = "0", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
slack-hook = "0"
chrono = "0"
clap = { version = "4", features = ["derive"] }
log = "0"
env_logger = "0"

[dev-dependencies]
mockito = "1"
