[package]
name = "remotesysmonitor"
version = "0.1.1"
edition = "2021"
description = "A tool for monitoring remote servers."
repository = "https://github.com/rvhonorato/remotesysmonitor"
license = "GPL-3.0-or-later"
keywords = ["monitoring", "remote", "ssh"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
website = "https://www.rvhonorato.me/remotesysmonitor"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
thiserror = "1"
ssh2 = "0"
reqwest = { version = "0", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
slack-hook = "0"
chrono = "0"
clap = { version = "4", features = ["derive"] }
log = "0"
env_logger = "0"

[dev-dependencies]
mockito = "1"
